2003-09-25  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-Stylus_C84.xml, printer/Epson-Stylus_C83.xml,
	  printer/Epson-Stylus_C82.xml, printer/Epson-Stylus_C80.xml,
	  printer/Epson-Stylus_C70.xml,
	  printer/Epson-Stylus_Photo_925.xml,
	  printer/Epson-Stylus_Photo_915.xml,
	  printer/Epson-Stylus_Photo_895.xml,
	  printer/Epson-Stylus_Photo_875.xml,
	  printer/Epson-Stylus_Photo_825.xml,
	  printer/Epson-Stylus_Photo_785.xml, printer/Epson-PM_790PT.xml,
	  printer/Epson-PM_850PT.xml: Updated text to correct information
	  about plain text printing and photo card access. Raised rating
	  of printers with photo card reader to "Perfectly".

2003-09-24  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_1010.xml, printer/HP-LaserJet_1012.xml,
	  printer/HP-LaserJet_1015.xml, driver/ljet4.xml: Added HP
	  LaserJet 1010, 1012, and 1015.

2003-09-22  Adan Trinidad <adan.trinidad@softtek.com>

	* printer/HP-DeskJet_5150.xml: Added the HP DeskJet 5150
	  device.

	* printer/HP-DeskJet_5652.xml: Added the HP DeskJet 5652
	  device.

2003-09-07  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_1200.xml: Changed recommended driver to
	  "pxlmono", updated text.

	* printer/Olympus-P-300E.xml, printer/Olympus-P-300NE.xml,
	  printer/Olympus-P-300U.xml, printer/Olympus-P-400.xml,
	  printer/Canon-CP-100.xml: Added dye-sublimation photo printers.

	* printer/Epson-Stylus_C83.xml, printer/Epson-Stylus_C84.xml:
	  Added new Epson printers.

	* printer/Canon-BJ-30.xml, printer/Canon-BJC-1000.xml,
	  printer/Canon-BJC-2000.xml, printer/Canon-BJC-2010.xml,
	  printer/Canon-BJC-210.xml, printer/Canon-BJC-2100.xml,
	  printer/Canon-BJC-2110.xml, printer/Canon-BJC-240.xml,
	  printer/Canon-BJC-250.xml, printer/Canon-BJC-3000.xml,
	  printer/Canon-BJC-4300.xml, printer/Canon-BJC-4400.xml,
	  printer/Canon-BJC-50.xml, printer/Canon-BJC-55.xml,
	  printer/Canon-BJC-6000.xml, printer/Canon-BJC-6100.xml,