@@ -322,6 +322,12 @@
    <id>printer/HP-LaserJet_6P</id><!-- HP LaserJet 6P -->
   </printer>
   <printer>
+   <id>printer/HP-LaserJet_1010</id><!-- HP LaserJet 1010 -->
+  </printer>
+  <printer>
+   <id>printer/HP-LaserJet_1012</id><!-- HP LaserJet 1012 -->
+  </printer>
+  <printer>
    <id>printer/HP-LaserJet_1015</id><!-- HP LaserJet 1015 -->
   </printer>
   <printer>
