@@ -18,11 +18,13 @@
   <url></url>
   <lang>
     <proprietary/>
-  <!--no pjl--><!--No "text"?--></lang>
+    <pjl/>
+    <!--No "text"?-->
+  </lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>F</functionality>
-  <driver></driver>
+  <functionality>B</functionality>
+  <driver>ljet4</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
@@ -30,19 +32,35 @@
     Cheap, compact desktop laser printer, foldable tray for 150 sheets,
     A4/Letter/Legal, up to 12 pages/min.&lt;p&gt;
 
-    Seems not to understand any standard language. There is no report
-    about this printer working on a GNU/Linux or Unix system and HP
-    classifies it as "host-based".&lt;p&gt;
+    HP classifies this printer as "host-based" whereas they claim the
+    HP LaserJet 1015 to understand PCL 5e. But the HP LaserJet 1010
+    and 1012 seem to understand a stripped-down (raster-graohic only,
+    no text) variant of PCL 5e and perhaps also 6.&lt;p&gt;
 
     Rick Richardson (rickr at mn dot rr dot com), author of the
     &quot;foo2zjs&quot; driver (driver for the HP LaserJet 1000/1005),
     has examined the output of the Windows driver for this printer and
     found out that the language looks like PJL + PCL 6/XL (see report
-    on the HP forum on linuxprinting.org). Probably the printer
-    understands a stripped-down PCL 6 without text capabilities. So it
-    would be interesting to try this printer with the
-    "lj5gray"/"lj5mono" drivers (NOT the "pxlmono" driver, because
-    "pxlmono" is a vector driver which sends text as text).&lt;p&gt;
+    on the HP forum on linuxprinting.org).&lt;p&gt;
+
+    Adam (madaman at web dot de) reports on the HP forum on
+    linuxprinting.org that the HP LaserJet 1010 works for him with
+    drivers for the HP LaserJet 1100, especially the "lj4dith"
+    driver.&lt;p&gt;
+
+    This shows that the HP LaserJet 101x series works at least with
+    PCL 5e raster drivers ("hpijs", "ljet4"/"lj4dith",
+    "gimp-print"/"gimp-print-ijs"). It perhaps also works with raster
+    drivers for PCL 6/XL ("lj5gray"/"lj5mono", but most probably not
+    "pxlmono", as "pxlmono" is a vector driver which printe text as
+    text).&lt;p&gt;
+    
+    So please test the printer with these drivers in all available
+    resolutions and also with other option settings. Try also downloading
+    the PPD files for the HP LaserJetb 4050 with these drivers, to test
+    extra options as toner saving, and especially "FastRes" with both
+    600 dpi and 1200 dpi as resolution setting. Please report all your
+    results and experiences on the HP forum of linuxprinting.org.&lt;p&gt;
 
     </en>
   </comments>
