@@ -1,5 +1,13 @@
 2003-09-25  Till Kamppeter <till.kamppeter@gmx.net>
 
+	* printer/HP-LaserJet_1010.xml, printer/HP-LaserJet_1012.xml:
+	  Raised the rating of these printers from "Paperweight" to
+	  "Mostly", they work with PCL-5e raster drivers as
+	  "ljet4". Updated text.
+
+	* driver/ljet4.xml, driver/lj4dith.xml: Added HP LaserJet 1010 and
+	  1012.
+
 	* printer/Epson-Stylus_C84.xml, printer/Epson-Stylus_C83.xml,
 	  printer/Epson-Stylus_C82.xml, printer/Epson-Stylus_C80.xml,
 	  printer/Epson-Stylus_C70.xml,
